--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ runs-on: windows-latest
 steps:
 - name: Download
 
-run: Invoke-WebRequest
+run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+
 - name: Extract
 
 run: Expand-Archive ngrok.zip
