--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
- name: CI
+name: CI
 
 
 on: [push, workflow_dispatch]
@@ -38,9 +38,8 @@ jobs:
 
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
 
-    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd" -Force)
 
     - name: Create Tunnel
 
-      run: .\ngrok\ngrok.exe tcp 3380
-
+      run: .\ngrok\ngrok.exe tcp 3389
